# lerobot

./: pyproject.toml
src/lerobot/configs/: default.py  parser.py  policies.py  train.py
src/lerobot/datasets/: compute_stats.py  factory.py  image_writer.py  lerobot_dataset.py  transforms.py  utils.py  video_utils.py
src/lerobot/envs/: configs.py  utils.py
src/lerobot/motors/: motors_bus.py
src/lerobot/optim/: optimizers.py  schedulers.py
src/lerobot/policies/: __init__.py  factory.py  normalize.py  pretrained.py  utils.py
src/lerobot/policies/act/: configuration_act.py
src/lerobot/policies/diffusion/: configuration_diffusion.py
src/lerobot/policies/openvla/: README.md  __init__.py  configuration_openvla.py  modeling_openvla.py  openvlm_with_expert.py
src/lerobot/policies/pi0/: configuration_pi0.py  modeling_pi0.py  paligemma_with_expert.py
src/lerobot/policies/pi0fast/: configuration_pi0fast.py
src/lerobot/policies/sac/: configuration_sac.py
src/lerobot/policies/sac/reward_model/: configuration_classifier.py
src/lerobot/policies/smolvla/: __init__.py  attention.py  blocks.py  configuration_smolvla.py  cuda_safe_layers.py  modeling_smolvla.py  ops.py  smolvlm_compatibility_patch.py  smolvlm_utils.py  smolvlm_with_expert.py
src/lerobot/policies/smolvla/tests/: __init__.py  test_blocks.py
src/lerobot/policies/tdmpc/: configuration_tdmpc.py
src/lerobot/policies/vqbet/: configuration_vqbet.py
src/lerobot/robots/: config.py  robot.py  utils.py
src/lerobot/teleoperators/: config.py  teleoperator.py
src/lerobot/utils/: hub.py  io_utils.py  utils.py
